--- a/pom.xml
+++ b/pom.xml
@@ -65,7 +65,13 @@
 			<artifactId>modelmapper</artifactId>
 			<version>2.3.5</version>
 		</dependency>
-	</dependencies>
+	
+   <dependency>
+     <groupId>org.apache.commons</groupId>
+     <artifactId>commons-math3</artifactId>
+     <version>3.6.1</version>
+   </dependency>
+ </dependencies>
 
 	<build>
 		<plugins>
